--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -50,24 +50,32 @@ jobs:
     with:
       mlir_override: ${{ inputs.mlir_override }}
 
-  build-ttxla:
-    needs: build-image
-    uses: ./.github/workflows/call-build.yml
+  # build-ttxla:
+  #   needs: build-image
+  #   uses: ./.github/workflows/call-build.yml
+  #   secrets: inherit
+  #   with:
+  #     docker_image: ${{ needs.build-image.outputs.docker-image }}
+  #     mlir_override: ${{ inputs.mlir_override }}
+
+  build-ttxla-debug:
+    uses: ./.github/workflows/call-build-debug.yml
+    name: "Build and test tt-xla (debug with coverage)"
     secrets: inherit
+    needs: [ build-image ]
     with:
       docker_image: ${{ needs.build-image.outputs.docker-image }}
-      mlir_override: ${{ inputs.mlir_override }}
 
-  test:
-    if: success() && !cancelled() && inputs.preset != 'tt_forge_models'
-    uses: ./.github/workflows/call-test.yml
-    needs: [ build-image, build-ttxla]
-    secrets: inherit
-    with:
-      test_suite: ${{ inputs.test_suite }}
-      test_suite_custom: ${{ inputs.test_suite_custom }}
-      docker_image: ${{ needs.build-image.outputs.docker-image-base }}
-      artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
-      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
-      wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
-      alchemist_artifact_name: ${{ needs.build-ttxla.outputs.alchemist_artifact_name }}
+  # test:
+  #   if: success() && !cancelled() && inputs.preset != 'tt_forge_models'
+  #   uses: ./.github/workflows/call-test.yml
+  #   needs: [ build-image, build-ttxla]
+  #   secrets: inherit
+  #   with:
+  #     test_suite: ${{ inputs.test_suite }}
+  #     test_suite_custom: ${{ inputs.test_suite_custom }}
+  #     docker_image: ${{ needs.build-image.outputs.docker-image-base }}
+  #     artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+  #     wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+  #     wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
+  #     alchemist_artifact_name: ${{ needs.build-ttxla.outputs.alchemist_artifact_name }}
