--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -48,7 +48,7 @@ jobs:
     uses: ./.github/workflows/call-build-docker.yml
     secrets: inherit
     with:
-      mlir_override: ${{ inputs.mlir_override }}
+      dockbuild: all
 
   # build-ttxla:
   #   needs: build-image
