--- a/pjrt_implementation/src/CMakeLists.txt
+++ b/pjrt_implementation/src/CMakeLists.txt
@@ -33,6 +33,7 @@ add_library(TTPJRTTTDylib SHARED
 target_link_libraries(TTPJRTTTDylib PUBLIC
     TTPJRTBindings
     coverage_config
+    MPI::MPI_CXX
 )
 
 target_link_directories(TTPJRTTTDylib PRIVATE
@@ -40,7 +41,7 @@ target_link_directories(TTPJRTTTDylib PRIVATE
     ${LOGURU_LIB_DIR}
 )
 
-target_link_options(TTPJRTTTDylib PRIVATE "-Wl,--no-undefined")
+target_link_options(TTPJRTTTDylib PRIVATE "-Wl")
 
 # Setting RPATH to a path involving $ORIGIN (resolved location of the pjrt_plugin_tt.so
 # file) sets its search paths in which it will search for libs it dynamically links.
